@@ -5,7 +5,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.MessageEmbed;
-import net.dv8tion.jda.api.entities.Role;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
@@ -14,7 +13,6 @@ import net.dv8tion.jda.api.utils.messages.MessageCreateBuilder;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import ti4.contest.replay.core.CombatReplayChannels;
-import ti4.contest.replay.core.CombatReplayHouse;
 import ti4.contest.replay.entities.CombatCandidateEntity;
 import ti4.contest.replay.entities.CombatCandidateEventEntity;
 import ti4.contest.replay.entities.CombatReplayContestEntity;
@@ -52,14 +50,12 @@ public class CombatReplayDiscordPostService {
                         String content,
                         List<MessageEmbed> embeds,
                         String tilePosition,
-                        String snapshotJson,
-                        boolean applyReplayDecoys)) {
+                        String snapshotJson)) {
             sendTileRenderMessage(
                     channel,
                     content,
                     embeds,
-                    replayPayloadRenderer.restoreReplayGame(
-                            snapshotJson, game, candidate, tilePosition, applyReplayDecoys),
+                    replayPayloadRenderer.restoreReplayGame(snapshotJson, game, candidate, tilePosition),
                     tilePosition);
             return;
         }
@@ -80,14 +76,14 @@ public class CombatReplayDiscordPostService {
             }
             MessageCreateBuilder builder = new MessageCreateBuilder().addFiles(fileUpload);
             if (!messageParts.isEmpty()) {
-                builder.addContent(messageParts.get(messageParts.size() - 1));
+                builder.addContent(messageParts.getLast());
             }
             if (!embeds.isEmpty()) builder.addEmbeds(embeds);
             return channel.sendMessage(builder.build()).complete();
         }
     }
 
-    public Message sendDiscordMessage(MessageChannel channel, String content, List<MessageEmbed> embeds) {
+    public static Message sendDiscordMessage(MessageChannel channel, String content, List<MessageEmbed> embeds) {
         if (embeds.isEmpty()) {
             return channel.sendMessage(content).complete();
         }
@@ -99,11 +95,11 @@ public class CombatReplayDiscordPostService {
 
     public ThreadChannel createReplayThread(Message posted, CombatCandidateEntity winner) {
         return posted.createThreadChannel(buildReplayThreadName(winner))
-                .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_24_HOURS)
+                .setAutoArchiveDuration(ThreadChannel.AutoArchiveDuration.TIME_1_HOUR)
                 .complete();
     }
 
-    public MessageChannel getContestThreadOrChannel(CombatReplayContestEntity contest) {
+    public static MessageChannel getContestThreadOrChannel(CombatReplayContestEntity contest) {
         if (JdaService.guildPrimary == null) return null;
         TextChannel contestChannel = JdaService.guildPrimary.getTextChannelById(contest.getPublicChannelId());
         if (contestChannel == null) return null;
@@ -121,27 +117,6 @@ public class CombatReplayDiscordPostService {
         return channels.isEmpty() ? null : channels.getFirst();
     }
 
-    public TextChannel houseChannel(CombatReplayHouse house) {
-        if (JdaService.guildPrimary == null || house == null) return null;
-        List<TextChannel> channels = JdaService.guildPrimary.getTextChannelsByName(house.channelName(), true);
-        return channels.isEmpty() ? null : channels.getFirst();
-    }
-
-    public String getLazaxRoleMention() {
-        if (JdaService.guildPrimary == null) return "";
-        List<Role> roles =
-                JdaService.guildPrimary.getRolesByName(CombatReplayLeaderboardService.LAZAX_MINIGAME_ROLE_NAME, true);
-        Role role = roles.isEmpty() ? null : roles.getFirst();
-        return role == null ? "" : role.getAsMention();
-    }
-
-    public String getHouseRoleMention(CombatReplayHouse house) {
-        if (JdaService.guildPrimary == null || house == null) return "";
-        List<Role> roles = JdaService.guildPrimary.getRolesByName(house.roleName(), true);
-        Role role = roles.isEmpty() ? null : roles.getFirst();
-        return role == null ? "" : role.getAsMention();
-    }
-
     private String buildReplayThreadName(CombatCandidateEntity candidate) {
         String attacker = normalizeThreadNamePart(candidate.getAttackerFaction());
         String defender = normalizeThreadNamePart(candidate.getDefenderFaction());
@@ -151,7 +126,7 @@ public class CombatReplayDiscordPostService {
         return "combat-archive-c" + candidateId + "-t" + tilePosition + "-" + attacker + "-v-" + defender;
     }
 
-    private String normalizeThreadNamePart(String value) {
+    private static String normalizeThreadNamePart(String value) {
         String normalized = StringUtils.defaultIfBlank(value, "unknown")
                 .trim()
                 .toLowerCase()
