@@ -18,11 +18,9 @@ import ti4.contest.replay.core.CombatCandidateEventType;
 import ti4.contest.replay.core.CombatCandidatePromotionStatus;
 import ti4.contest.replay.core.CombatCandidateStatus;
 import ti4.contest.replay.core.CombatContestSettings;
-import ti4.contest.replay.core.CombatReplayDecoys;
 import ti4.contest.replay.core.CombatReplaySelection;
 import ti4.contest.replay.core.CombatReplayTrackedEvent;
 import ti4.contest.replay.core.CombatRollPayload;
-import ti4.contest.replay.core.CombatSideBetType;
 import ti4.contest.replay.core.CombatSideState;
 import ti4.contest.replay.core.LazaxCombatSupport;
 import ti4.contest.replay.core.renderers.CombatReplayTileRenderer;
@@ -50,6 +48,8 @@ import ti4.service.combat.CombatUnitSelectionHelper;
 public class CombatReplayService {
 
     private static final Pattern SYSTEM_TILE_PATTERN = Pattern.compile("-system-([^-]+)-");
+    private static final double ENDING_TENSION_SURVIVAL_THRESHOLD = 0.20;
+    private static final double ENDING_TENSION_CLOSE_FIGHT_SCORE = 0.2;
     private static final Set<CombatCandidateStatus> OPEN_CANDIDATE_STATUSES =
             EnumSet.of(CombatCandidateStatus.TRACKING, CombatCandidateStatus.PENDING_RESOLUTION);
     private static final ThreadLocal<PreInteractionSnapshot> preInteractionSnapshot = new ThreadLocal<>();
@@ -60,6 +60,7 @@ public class CombatReplayService {
     private final CombatCandidateEventRepository candidateEventRepository;
     private final CombatReplayEventAppender eventAppender;
     private final CombatReplaySideBetTriggerService sideBetTriggerService;
+    private final CombatSideBetAvailabilityService availabilityService;
     private CombatReplaySelection selection;
 
     @PostConstruct
@@ -69,6 +70,7 @@ public class CombatReplayService {
     }
 
     public PreInteractionSnapshot capturePreInteractionSnapshot(Game game) {
+        if (!settings.isEnabled()) return PreInteractionSnapshot.empty();
         if (game == null) return PreInteractionSnapshot.empty();
 
         Map<Long, CandidateInitialSnapshot> snapshots = new HashMap<>();
@@ -91,6 +93,9 @@ public class CombatReplayService {
     }
 
     public void onSpaceCombatStarted(Game game, Player attacker, Player defender, Tile tile) {
+        if (!settings.isEnabled()) return;
+        if (isDiscordantStarsGame(game)) return;
+
         boolean trackAllCombatsAsCandidates = settings.getRuntime().isTrackAllCombatsAsCandidates();
         if (!trackAllCombatsAsCandidates
                 && (!LazaxCombatSupport.isEligibleGame(game)
@@ -114,6 +119,7 @@ public class CombatReplayService {
     }
 
     public void onButtonInteractionSettled(Game game, Player player, ButtonInteractionEvent event) {
+        if (!settings.isEnabled()) return;
         for (CombatCandidateEntity candidate : getOpenCandidates(game)) {
             if (candidate.getStatus() == CombatCandidateStatus.PENDING_RESOLUTION
                     && !candidate
@@ -134,6 +140,7 @@ public class CombatReplayService {
     }
 
     public void finalizeExpiredPendingResolutionCandidates() {
+        if (!settings.isEnabled()) return;
         LocalDateTime cutoff =
                 LocalDateTime.now().minusSeconds(settings.getReplayExecution().getPendingResolutionWindowSeconds());
         for (CombatCandidateEntity candidate : candidateRepository.findByStatusAndPendingResolutionStartedAtBefore(
@@ -153,6 +160,7 @@ public class CombatReplayService {
             boolean whiff,
             boolean slam,
             CombatRollPayload payload) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = getTrackingCandidate(game, tile.getPosition());
         if (candidate == null || !isReplayRoll(rollType)) return;
         if (rollType != CombatRollType.SpaceCannonOffence && !matchesParticipants(candidate, player, opponent)) return;
@@ -173,6 +181,7 @@ public class CombatReplayService {
 
     public boolean isTrackedCandidateRoll(
             Game game, Player player, Player opponent, Tile tile, CombatRollType rollType) {
+        if (!settings.isEnabled()) return false;
         if (game == null || player == null || opponent == null || tile == null || !isReplayRoll(rollType)) {
             return false;
         }
@@ -200,6 +209,7 @@ public class CombatReplayService {
             MessageEmbed embed,
             String sourceChannelName,
             CombatReplayTrackedEvent trackedEvent) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = resolveCandidateForMirrorEvent(game, player, sourceChannelName);
         if (candidate == null) return;
         ensureInitialSnapshot(candidate, game);
@@ -211,6 +221,7 @@ public class CombatReplayService {
     }
 
     public void mirrorLeaderPlayed(Game game, Player player, String leaderId, String sourceChannelName) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = resolveCandidateForMirrorEvent(game, player, sourceChannelName);
         if (candidate == null) return;
         ensureInitialSnapshot(candidate, game);
@@ -230,6 +241,7 @@ public class CombatReplayService {
             String actionCardId,
             String sourceChannelName,
             CombatReplayTrackedEvent trackedEvent) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = resolveCandidateForMirrorEvent(game, player, sourceChannelName);
         if (candidate == null) return;
         ensureInitialSnapshot(candidate, game);
@@ -246,6 +258,7 @@ public class CombatReplayService {
     }
 
     public void mirrorRetreatDeclared(Game game, Player player, String sourceChannelName) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = resolveCandidateForMirrorEvent(game, player, sourceChannelName);
         if (candidate == null) return;
         ensureInitialSnapshot(candidate, game);
@@ -260,6 +273,7 @@ public class CombatReplayService {
     }
 
     public void mirrorRetreatResolved(Game game, Player player, String destination, String sourceChannelName) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = resolveCandidateForMirrorEvent(game, player, sourceChannelName);
         if (candidate == null) return;
         ensureInitialSnapshot(candidate, game);
@@ -274,6 +288,7 @@ public class CombatReplayService {
     }
 
     public void mirrorAssaultCannonAssigned(Game game, Player player, String sourceChannelName) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = resolveCandidateForMirrorEvent(game, player, sourceChannelName);
         if (candidate == null) return;
         ensureInitialSnapshot(candidate, game);
@@ -288,6 +303,7 @@ public class CombatReplayService {
     }
 
     public void mirrorGravitonExhausted(Game game, Player player, String sourceChannelName) {
+        if (!settings.isEnabled()) return;
         CombatCandidateEntity candidate = resolveCandidateForMirrorEvent(game, player, sourceChannelName);
         if (candidate == null) return;
         ensureInitialSnapshot(candidate, game);
@@ -449,7 +465,6 @@ public class CombatReplayService {
                 roundsObserved));
         candidateRepository.save(candidate);
 
-        appendFalseColorsRevealedEvent(candidate, roundsObserved);
         appendTileRenderEvent(
                 candidate,
                 CombatCandidateEventType.RESOLVED,
@@ -484,7 +499,6 @@ public class CombatReplayService {
         }
         candidateRepository.save(candidate);
 
-        appendFalseColorsRevealedEvent(candidate, roundsObserved);
         appendTileRenderEvent(
                 candidate,
                 CombatCandidateEventType.RESOLVED,
@@ -506,14 +520,6 @@ public class CombatReplayService {
         candidateRepository.save(candidate);
 
         appendDiscordEvent(candidate, CombatCandidateEventType.CANCELLED, null, null, "## Contest Closed\n" + reason);
-    }
-
-    private void appendFalseColorsRevealedEvent(CombatCandidateEntity candidate, int roundsObserved) {
-        String message = CombatReplayDecoys.renderDisappearanceMessage(
-                CombatReplayDecoys.read(candidate.getReplayAbilitiesJson()));
-        if (message == null || message.isBlank()) return;
-
-        appendDiscordEvent(candidate, CombatCandidateEventType.RESOLVED, roundsObserved, null, message);
     }
 
     private boolean trackHitAssignments(
@@ -563,7 +569,6 @@ public class CombatReplayService {
 
         candidate.setPreReplayContextText(snapshot.preReplayContextText());
         candidate.setInitialRenderSnapshotJson(snapshot.initialRenderSnapshotJson());
-        candidate.setReplayAbilitiesJson(snapshot.replayAbilitiesJson());
         candidate.setAttackerDestroyerCount(snapshot.attackerDestroyerCount());
         candidate.setDefenderDestroyerCount(snapshot.defenderDestroyerCount());
         candidate.setAttackerHasAssaultCannon(snapshot.attackerHasAssaultCannon());
@@ -590,12 +595,9 @@ public class CombatReplayService {
         LazaxCombatSupport.SpaceCombatSnapshot combatSnapshot =
                 LazaxCombatSupport.buildSpaceCombatSnapshot(game, attacker, defender, tile);
         if (combatSnapshot == null) return null;
-        String replayAbilitiesJson = CombatReplayDecoys.buildJson(attacker, defender, tile, settings.isDecoysEnabled());
         return new CandidateInitialSnapshot(
-                LazaxCombatSupport.formatCombatTechSummary(
-                        tile, attacker, defender, CombatReplayDecoys.read(replayAbilitiesJson)),
+                LazaxCombatSupport.formatCombatTechSummary(tile, attacker, defender),
                 CombatReplayTileRenderer.captureInitialSnapshot(game, tile.getPosition()),
-                replayAbilitiesJson,
                 countDestroyersInCombat(tile, attacker),
                 countDestroyersInCombat(tile, defender),
                 hasAssaultCannon(attacker),
@@ -619,6 +621,7 @@ public class CombatReplayService {
     }
 
     public void refreshSelectionSnapshot() {
+        if (!settings.isEnabled()) return;
         LocalDateTime now = LocalDateTime.now();
         List<CombatObservationEntity> window = observationRepository.findByStartedAtGreaterThanEqualOrderByStartedAtAsc(
                 now.minusMinutes(settings.getCandidateSelection().getWindow().getLookbackMinutes()));
@@ -646,12 +649,16 @@ public class CombatReplayService {
         double winnerSurvivalRatio = safeRatio(winnerRemainingHp, winnerInitialHp);
         double roundScore = Math.sqrt(Math.max(0, roundsObserved)) * sizeFactor;
         double openingBalanceScore = 0.9 * Math.pow(strengthRatio, 3.0);
-        double endingTensionScore = winnerRemainingHp <= 0 ? 0.0 : 5.0 * Math.exp(-6.0 * winnerSurvivalRatio);
-        double defenderWinBonus = winnerFaction.equalsIgnoreCase(candidate.getDefenderFaction()) ? 0.5 : 0.0;
-        return roundScore + openingBalanceScore + endingTensionScore + defenderWinBonus;
+        double endingTensionScore = endingTensionScore(winnerRemainingHp, winnerSurvivalRatio);
+        return roundScore + openingBalanceScore + endingTensionScore;
     }
 
-    private static double computeDrawPromotionScore(InitialCombatStats initialStats, int roundsObserved) {
+    private static double endingTensionScore(double winnerRemainingHp, double winnerSurvivalRatio) {
+        if (winnerRemainingHp <= 0 || winnerSurvivalRatio <= 0) return 0.0;
+        return winnerSurvivalRatio <= ENDING_TENSION_SURVIVAL_THRESHOLD ? ENDING_TENSION_CLOSE_FIGHT_SCORE : 0.0;
+    }
+
+    public static double computeDrawPromotionScore(InitialCombatStats initialStats, int roundsObserved) {
         double weakerHp = Math.min(initialStats.attackerHp(), initialStats.defenderHp());
         double weakerStrength = Math.min(initialStats.attackerStrength(), initialStats.defenderStrength());
         double strongerStrength = Math.max(initialStats.attackerStrength(), initialStats.defenderStrength());
@@ -659,7 +666,7 @@ public class CombatReplayService {
         double strengthRatio = safeRatio(weakerStrength, strongerStrength);
         double roundScore = Math.sqrt(Math.max(0, roundsObserved)) * sizeFactor;
         double openingBalanceScore = 0.9 * Math.pow(strengthRatio, 3.0);
-        return roundScore + openingBalanceScore + 5.0;
+        return roundScore + openingBalanceScore;
     }
 
     public static InitialCombatStats initialCombatStats(CombatCandidateEntity candidate) {
@@ -741,7 +748,7 @@ public class CombatReplayService {
         boolean skippedAfb = roundOneCombatRoll
                 && state != null
                 && !state.rolledAfb()
-                && isAfbSkippedAvailable(candidate, player.getFaction());
+                && availabilityService.isAfbSkippedAvailable(candidate, player.getFaction());
         CombatSideState.markRollFlags(
                 candidate,
                 player.getFaction(),
@@ -751,23 +758,6 @@ public class CombatReplayService {
                 roundOneCombatRoll && whiff,
                 roundOneCombatRoll && slam);
         candidateRepository.save(candidate);
-    }
-
-    private boolean isAfbSkippedAvailable(CombatCandidateEntity candidate, String targetFaction) {
-        if (candidate == null || targetFaction == null) return false;
-        CombatSideState state = CombatSideState.forFaction(candidate, targetFaction);
-        if (state == null || !CombatSideBetType.AFB_SKIPPED.isAvailable(state.destroyerCount())) return false;
-        return !(state.destroyerCount() == 1 && opponentHasAssaultCannon(candidate, targetFaction));
-    }
-
-    private boolean opponentHasAssaultCannon(CombatCandidateEntity candidate, String targetFaction) {
-        if (targetFaction.equalsIgnoreCase(candidate.getAttackerFaction())) {
-            return Boolean.TRUE.equals(candidate.getDefenderHasAssaultCannon());
-        }
-        if (targetFaction.equalsIgnoreCase(candidate.getDefenderFaction())) {
-            return Boolean.TRUE.equals(candidate.getAttackerHasAssaultCannon());
-        }
-        return false;
     }
 
     private void appendSideBetTriggerEvents(
@@ -856,12 +846,17 @@ public class CombatReplayService {
 
     private boolean isEligibleCandidate(
             Game game, Player attacker, Player defender, Tile tile, CombatReplaySelection.Evaluation evaluation) {
+        if (isDiscordantStarsGame(game)) return false;
         if (settings.getRuntime().isTrackAllCombatsAsCandidates()) {
             return getOpenCandidate(game, tile.getPosition()) == null;
         }
         return evaluation.eligible()
                 && !LazaxCombatSupport.hasExcludedFlagship(attacker, defender)
                 && getOpenCandidate(game, tile.getPosition()) == null;
+    }
+
+    private boolean isDiscordantStarsGame(Game game) {
+        return game != null && game.isDiscordantStarsMode();
     }
 
     private CombatReplaySelection selection() {
@@ -1036,7 +1031,7 @@ public class CombatReplayService {
 
     private static double safeRatio(double weaker, double stronger) {
         if (stronger <= 0) return 0.0;
-        return Math.max(0.0, Math.min(1.0, weaker / stronger));
+        return Math.clamp(weaker / stronger, 0.0, 1.0);
     }
 
     private String firstNonBlank(String first, String fallback) {
@@ -1063,10 +1058,9 @@ public class CombatReplayService {
         }
     }
 
-    public record CandidateInitialSnapshot(
+    private record CandidateInitialSnapshot(
             String preReplayContextText,
             String initialRenderSnapshotJson,
-            String replayAbilitiesJson,
             int attackerDestroyerCount,
             int defenderDestroyerCount,
             boolean attackerHasAssaultCannon,
